add footer and content

--- a/amazon.html
+++ b/amazon.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="amazon.css">
  </head>
  <body>
-    <HEADER>
+    <header>
         <div class="navbar">
             <a id="amazon" href>Amazon.in</a>
             <a href>Acount</a>
@@ -17,8 +17,15 @@
             <input type="text" placeholder="Entere your Product">
             <button>Search</button>
         </div>
-
-        
-    </HEADER>
+    </header>
+        <div id="content-box">
+            <div class="content-item" style="background-color:rgba(255,0,0,0.5)">First</div>
+            <div class="content-item" style="background-color:rgba(0,255,0,0.5)">second</div>
+            <div class="content-item" style="background-color:rgba(0,0,255,0.5)">third</div>
+        </div>
+    <footer>
+        <p>Made with ❤️ by Shani</p>
+        <p>2026 1 feb copyright &#169 of Amazon </p>
+    </footer>
  </body>
  </html>
